--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cmdk": "^1.0.0",
     "embla-carousel-react": "^8.1.3",
     "framer-motion": "^11.2.10",
+    "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.390.0",
     "markdown-to-jsx": "^7.4.7",
