--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.390.0",
     "markdown-to-jsx": "^7.4.7",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
