--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "repository": "https://github.com/sagnikghosh1999/portfolio-next.git",
+  "author": "Sagnik Ghosh <sagnikghosh813@gmail.com>",
+  "license": "MIT"
 }
